Update12082025/1 index.html

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <p><i class="fas fa-fire"></i> Schweißarbeiten</p>
         <p><i class="fas fa-bolt"></i> Elektroinstallationen</p>
       </div>
-      <p style="margin-top: 20px;">Verlassen Sie sich auf Qualität, Zuverlässigkeit und brasilianisches Handwerkskönnen.</p>
+      <p style="margin-top: 20px;">Verlassen Sie sich auf Qualität, Zuverlässigkeit und europäisch/brasilianisches Handwerkskönnen.</p>
     </div>
 
     <div id="content-en" style="display:none">
@@ -176,7 +176,123 @@
 
     <!-- Demo-Filler, damit Scroll sichtbar wird -->
     <section style="margin-top:40px;">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ... (füge hier echten Inhalt ein)</p>
+      <p><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pintura e Pintura Automotiva - Qualidade e Experiência</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        line-height: 1.6;
+    }
+    header {
+        background-color: #ffcc00;
+        color: #000;
+        padding: 20px;
+        text-align: center;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+    main {
+        padding: 120px 20px 60px 20px;
+        max-width: 900px;
+        margin: auto;
+    }
+    h1, h2 {
+        color: #333;
+    }
+    .foto-placeholder {
+        background-color: #ddd;
+        width: 100%;
+        height: 250px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #666;
+        font-size: 18px;
+        margin: 20px 0;
+        border: 2px dashed #aaa;
+    }
+    ul {
+        padding-left: 20px;
+    }
+    .whatsapp-btn {
+        display: block;
+        text-align: center;
+        background-color: #25d366;
+        color: white;
+        padding: 15px;
+        margin-top: 30px;
+        text-decoration: none;
+        font-weight: bold;
+        border-radius: 8px;
+        transition: background-color 0.3s;
+    }
+    .whatsapp-btn:hover {
+        background-color: #1ebe5a;
+    }
+</style>
+</head>
+<body>
+
+<header>
+    <h1>Pintura e Serviços de Qualidade</h1>
+    <p>Moderno prédio brasileiro - Experiência e Precisão</p>
+</header>
+
+<main>
+    <div class="foto-placeholder">
+        Espaço para Foto
+    </div>
+
+    <h2>Pintura e Serviços com Qualidade e Experiência</h2>
+    <p>Levamos cor e proteção para tudo o que é importante para você – tanto no interior quanto no exterior. Com experiência e equipamentos profissionais, realizamos serviços de pintura e revestimento precisos e duradouros – em prédios, estruturas metálicas e muito mais.</p>
+
+    <h2>Nossos Serviços:</h2>
+    <ol>
+        <li><strong>Pintura Interna e Design de Ambientes</strong><br>
+        Seja sala, quarto ou escritório – deixamos seus espaços internos mais bonitos com tintas de alta qualidade, acabamento limpo e atenção aos detalhes. Também oferecemos efeitos criativos, contrastes ou superfícies texturizadas.</li>
+
+        <li><strong>Pintura de Fachadas</strong><br>
+        Proteção e beleza para o seu imóvel: pintamos fachadas de forma profissional – contra umidade, sol e sujeira. Usamos produtos adequados para o clima brasileiro, mesmo em condições climáticas desafiadoras.</li>
+
+        <li><strong>Pintura de Portões e Estruturas Metálicas</strong><br>
+        Seja portão de garagem, entrada ou grades – preparamos, lixamos e pintamos superfícies metálicas para proteção de longo prazo contra corrosão.</li>
+
+        <li><strong>Pintura com Pistola e Sistema Airless</strong><br>
+        Para resultados uniformes, lisos e rápidos, utilizamos sistemas profissionais de pulverização – como pistola ou equipamentos Airless. Ideal para grandes áreas, portões, paredes ou locais de difícil acesso.</li>
+
+        <li><strong>Técnicas com Rolo e Pincel</strong><br>
+        Para superfícies sensíveis, áreas pequenas ou trabalhos detalhados, utilizamos métodos clássicos com rolo ou pincel – de acordo com a necessidade e o tipo de superfície.</li>
+    </ol>
+
+    <h2>Por que escolher a gente?</h2>
+    <ul>
+        <li>Experiência e confiabilidade</li>
+        <li>Execução limpa e dentro do prazo</li>
+        <li>Ferramentas e materiais profissionais</li>
+        <li>Consultoria na escolha de cores e materiais</li>
+        <li>Adaptação ao clima brasileiro</li>
+    </ul>
+
+    <p><strong>Entre em contato agora!</strong><br>
+    Atendemos pessoalmente – no local ou por telefone. Vamos juntos encontrar a melhor solução para o seu projeto. Seja construção nova, reforma ou pintura de proteção: você tem um parceiro forte ao seu lado.</p>
+
+    <a class="whatsapp-btn" href="https://wa.me/5511941188664" target="_blank">
+        📱 Fale Conosco no WhatsApp
+    </a>
+</main>
+
+</body>
+</html>
+</p>
       <p style="height:1200px"></p>
     </section>
   </main>
