--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Kaussen Serviços</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    :root{
-      --header-height: 360px; /* anpassen wenn du andere Höhe willst */
+    :root {
+      --header-height: 360px; /* anpassen */
     }
-    *{box-sizing: border-box}
+    * { box-sizing: border-box; }
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f4f4f4;
-      text-align: center;
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
       color: #333;
+      text-align: center;
     }
 
-    /* Fixierter Header */
+    /* Fixierter Header mit Bild */
     .header {
       position: fixed;
       top: 0;
@@ -26,32 +26,32 @@
       width: 100%;
       height: var(--header-height);
       z-index: 1000;
-      overflow: hidden; /* Bild beschneidet, wenn nötig */
+      overflow: hidden;
       box-shadow: 0 2px 8px rgba(0,0,0,0.12);
+      /* kein Hintergrund-Farbwert hier (kein Gelb) */
     }
-
-    /* Header Bild (Vorher / Nachher) */
     .header .header-img {
       width: 100%;
       height: 100%;
-      object-fit: cover; /* füllt den Header, schneidet bei Bedarf zu */
+      object-fit: cover;
       display: block;
     }
 
-    /* Logo oben links */
+    /* Logo oben links (verkleinert) */
     .logo {
       position: absolute;
-      top: 40px;
-      left: 80px;
-      width: 220px;    /* verkleinert */
+      top: 12px;
+      left: 12px;
+      width: 110px; /* verkleinert */
       height: auto;
-      z-index: 1010;   /* über dem Header-Bild */
-      background: rgba(255,255,255,0.0); /* optional: weißer Hintergrund z.B. rgba(255,255,255,0.8) */
+      z-index: 1010;
       padding: 4px;
       border-radius: 4px;
+      /* optionaler leichter Hintergrund, wenn Lesbarkeit nötig:
+         background: rgba(255,255,255,0.85); */
     }
 
-    /* Sprachauswahl oben rechts */
+    /* Sprachwahl oben rechts */
     .language-select {
       position: absolute;
       top: 12px;
@@ -64,7 +64,7 @@
       font-size: 0.95rem;
     }
 
-    /* Optional: halbtransparenter Overlay-Text (z.B. Slogan) */
+    /* optionaler Slogan über dem Bild */
     .header .overlay {
       position: absolute;
       left: 50%;
@@ -77,9 +77,10 @@
       background: rgba(0,0,0,0.25);
       padding: 6px 12px;
       border-radius: 6px;
+      pointer-events: none;
     }
 
-    /* Platzhalter für Content, damit Header nicht überlappt */
+    /* Inhalt (Platz schaffen damit Header nicht überlappt) */
     .content {
       max-width: 900px;
       margin: 0 auto;
@@ -91,221 +92,50 @@
     .services { line-height: 1.9; }
     .services i { color: #0077cc; margin-right: 10px; }
 
+    /* kleiner WhatsApp-Button (wie gewünscht) */
     .whatsapp-button {
-      display: inline-block;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
       margin-top: 30px;
-      padding: 12px 20px;
+      padding: 8px 12px;
       background-color: #25D366;
-      color: white;
+      color: #fff;
       font-weight: bold;
       text-decoration: none;
-      border-radius: 5px;
-      font-size: 1.05em;
+      border-radius: 6px;
+      font-size: 0.95rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.12);
     }
+    .whatsapp-button i { font-size: 1.05rem; }
 
-    /* Responsive: bei kleinen Bildschirmen Header-Höhe reduzieren */
-    @media (max-width: 720px){
-      :root{ --header-height: 240px; }
-      .logo{ width: 86px; }
-      .header .overlay{ font-size: 0.9rem; bottom: 10px; }
+    /* Responsive */
+    @media (max-width: 720px) {
+      :root { --header-height: 240px; }
+      .logo { width: 86px; top: 10px; left: 10px; }
+      .language-select { top: 10px; right: 10px; padding: 6px 8px; }
+      .header .overlay { font-size: 0.9rem; bottom: 10px; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Fixierter Header mit generiertem Vorher/Nachher-Bild -->
-  <header class="header" role="banner">
-    <!-- Bild: ersetze dateiname falls nötig -->
-    <img src="Renovierung im Vergleich.png" alt="Vorher und Nachher Renovierung" class="header-img">
-
-    <!-- Logo (klein oben links) -->
-    <img src="Kaussen_Servicos_Logo_vector_Trans_blau.svg" alt="Kaussen Serviços" class="logo">
-
-    <!-- Sprache oben rechts -->
-    <select class="language-select" onchange="changeLanguage(this.value)" aria-label="Sprache wählen">
+  <!-- Header mit deinem generierten Vorher/Nachher-Bild -->
+  <header class="header" role="banner" aria-label="Vorher Nachher Header">
+    <img src="Renovierung im Vergleich.png" alt="Vorher / Nachher Renovierung" class="header-img">
+    <img src="Kaussen_Servicos_Logo_vector_Trans_blau.svg" alt="Kaussen Serviços Logo" class="logo">
+    <select class="language-select" onchange="changeLanguage(this.value)" aria-label="Escolha o idioma">
       <option value="pt">Português</option>
       <option value="de">Deutsch</option>
       <option value="en">English</option>
     </select>
-
-    <!-- Optionaler Slogan über dem Bild -->
     <div class="overlay">Renovação com qualidade | Kaussen Serviços</div>
   </header>
 
   <!-- Hauptinhalt -->
-  <main class="content" role="main">
+  <main class="content" role="main" id="main-content">
     <div id="content-pt">
-      <h1>Kaussen Serviços – Soluções completas para sua obra</h1>
-      <div class="services">
-        <p><i class="fas fa-paint-roller"></i> Pintura e trabalhos de acabamento</p>
-        <p><i class="fas fa-tools"></i> Reformas em geral</p>
-        <p><i class="fas fa-hammer"></i> Drywall e divisórias</p>
-        <p><i class="fas fa-fire"></i> Soldagem e estruturas metálicas</p>
-        <p><i class="fas fa-bolt"></i> Instalações elétricas</p>
-      </div>
-      <p style="margin-top: 20px;">Atendimento com excelência e dedicação em cada projeto.</p>
-    </div>
-
-    <div id="content-de" style="display:none">
-      <h1>Kaussen Serviços – Ihr Partner für Bau und Renovierung</h1>
-      <div class="services">
-        <p><i class="fas fa-paint-roller"></i> Maler- und Lackierarbeiten</p>
-        <p><i class="fas fa-tools"></i> Allgemeine Reformierungen</p>
-        <p><i class="fas fa-hammer"></i> Trockenbau (Drywall)</p>
-        <p><i class="fas fa-fire"></i> Schweißarbeiten</p>
-        <p><i class="fas fa-bolt"></i> Elektroinstallationen</p>
-      </div>
-      <p style="margin-top: 20px;">Verlassen Sie sich auf Qualität, Zuverlässigkeit und europäisch/brasilianisches Handwerkskönnen.</p>
-    </div>
-
-    <div id="content-en" style="display:none">
-      <h1>Kaussen Serviços – Complete solutions for your construction needs</h1>
-      <div class="services">
-        <p><i class="fas fa-paint-roller"></i> Painting and finishing work</p>
-        <p><i class="fas fa-tools"></i> General renovations</p>
-        <p><i class="fas fa-hammer"></i> Drywall and partitions</p>
-        <p><i class="fas fa-fire"></i> Welding and metal structures</p>
-        <p><i class="fas fa-bolt"></i> Electrical installations</p>
-      </div>
-      <p style="margin-top: 20px;">Excellence and dedication in every project.</p>
-    </div>
-
-    <a class="whatsapp-button" href="https://wa.me/55872241042" target="_blank" rel="noopener">
-      <i class="fab fa-whatsapp"></i> Fale conosco pelo WhatsApp
-    </a>
-
-    <!-- Demo-Filler, damit Scroll sichtbar wird -->
-    <section style="margin-top:40px;">
-      <p><!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pintura e Pintura Automotiva - Qualidade e Experiência</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        line-height: 1.6;
-    }
-    header {
-        background-color: #ffcc00;
-        color: #000;
-        padding: 20px;
-        text-align: center;
-        position: fixed;
-        top: 0;
-        width: 100%;
-        z-index: 1000;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    }
-    main {
-        padding: 120px 20px 60px 20px;
-        max-width: 900px;
-        margin: auto;
-    }
-    h1, h2 {
-        color: #333;
-    }
-    .foto-placeholder {
-        background-color: #ddd;
-        width: 100%;
-        height: 250px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #666;
-        font-size: 18px;
-        margin: 20px 0;
-        border: 2px dashed #aaa;
-    }
-    ul {
-        padding-left: 20px;
-    }
-    .whatsapp-btn {
-        display: block;
-        text-align: center;
-        background-color: #25d366;
-        color: white;
-        padding: 15px;
-        margin-top: 30px;
-        text-decoration: none;
-        font-weight: bold;
-        border-radius: 8px;
-        transition: background-color 0.3s;
-    }
-    .whatsapp-btn:hover {
-        background-color: #1ebe5a;
-    }
-</style>
-</head>
-<body>
-
-<header>
-    <h1>Pintura e Serviços de Qualidade</h1>
-    <p>Moderno prédio brasileiro - Experiência e Precisão</p>
-</header>
-
-<main>
-    <div class="foto-placeholder">
-        Espaço para Foto
-    </div>
-
-    <h2>Pintura e Serviços com Qualidade e Experiência</h2>
-    <p>Levamos cor e proteção para tudo o que é importante para você – tanto no interior quanto no exterior. Com experiência e equipamentos profissionais, realizamos serviços de pintura e revestimento precisos e duradouros – em prédios, estruturas metálicas e muito mais.</p>
-
-    <h2>Nossos Serviços:</h2>
-    <ol>
-        <li><strong>Pintura Interna e Design de Ambientes</strong><br>
-        Seja sala, quarto ou escritório – deixamos seus espaços internos mais bonitos com tintas de alta qualidade, acabamento limpo e atenção aos detalhes. Também oferecemos efeitos criativos, contrastes ou superfícies texturizadas.</li>
-
-        <li><strong>Pintura de Fachadas</strong><br>
-        Proteção e beleza para o seu imóvel: pintamos fachadas de forma profissional – contra umidade, sol e sujeira. Usamos produtos adequados para o clima brasileiro, mesmo em condições climáticas desafiadoras.</li>
-
-        <li><strong>Pintura de Portões e Estruturas Metálicas</strong><br>
-        Seja portão de garagem, entrada ou grades – preparamos, lixamos e pintamos superfícies metálicas para proteção de longo prazo contra corrosão.</li>
-
-        <li><strong>Pintura com Pistola e Sistema Airless</strong><br>
-        Para resultados uniformes, lisos e rápidos, utilizamos sistemas profissionais de pulverização – como pistola ou equipamentos Airless. Ideal para grandes áreas, portões, paredes ou locais de difícil acesso.</li>
-
-        <li><strong>Técnicas com Rolo e Pincel</strong><br>
-        Para superfícies sensíveis, áreas pequenas ou trabalhos detalhados, utilizamos métodos clássicos com rolo ou pincel – de acordo com a necessidade e o tipo de superfície.</li>
-    </ol>
-
-    <h2>Por que escolher a gente?</h2>
-    <ul>
-        <li>Experiência e confiabilidade</li>
-        <li>Execução limpa e dentro do prazo</li>
-        <li>Ferramentas e materiais profissionais</li>
-        <li>Consultoria na escolha de cores e materiais</li>
-        <li>Adaptação ao clima brasileiro</li>
-    </ul>
-
-    <p><strong>Entre em contato agora!</strong><br>
-    Atendemos pessoalmente – no local ou por telefone. Vamos juntos encontrar a melhor solução para o seu projeto. Seja construção nova, reforma ou pintura de proteção: você tem um parceiro forte ao seu lado.</p>
-
-    <a class="whatsapp-btn" href="https://wa.me/5511941188664" target="_blank">
-        📱 Fale Conosco no WhatsApp
-    </a>
-</main>
-
-</body>
-</html>
-</p>
-      <p style="height:1200px"></p>
-    </section>
-  </main>
-
-  <script>
-    function changeLanguage(lang) {
-      document.getElementById('content-pt').style.display = (lang === 'pt') ? 'block' : 'none';
-      document.getElementById('content-de').style.display = (lang === 'de') ? 'block' : 'none';
-      document.getElementById('content-en').style.display = (lang === 'en') ? 'block' : 'none';
-    }
-  </script>
-</body>
-</html>
+      <h1>Kaussen Serviç
 
 
 
