Update12082025/3 index.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,77 @@
   <!-- Hauptinhalt -->
   <main class="content" role="main" id="main-content">
     <div id="content-pt">
-      <h1>Kaussen Serviç
+      <h1>Kaussen Serviços – Soluções completas para sua obra</h1>
+
+      <!-- Platzhalter-Foto (falls du ein zusätzliches Bild in den Content willst) -->
+      <div style="border:2px dashed #ccc; background:#eee; height:220px; display:flex; align-items:center; justify-content:center; color:#666; margin:18px 0;">
+        Espaço para uma foto (substitua por sua imagem)
+      </div>
+
+      <div class="services">
+        <p><i class="fas fa-paint-roller"></i> Pintura e trabalhos de acabamento</p>
+        <p><i class="fas fa-tools"></i> Reformas em geral</p>
+        <p><i class="fas fa-hammer"></i> Drywall e divisórias</p>
+        <p><i class="fas fa-fire"></i> Soldagem e estruturas metálicas</p>
+        <p><i class="fas fa-bolt"></i> Instalações elétricas</p>
+      </div>
+
+      <p style="margin-top:20px;">Atendimento com excelência e dedicação em cada projeto.</p>
+
+      <!-- kleinerer WhatsApp-Button (leitet an +55 11 94118-8664) -->
+      <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco no WhatsApp">
+        <i class="fab fa-whatsapp" aria-hidden="true"></i>
+        Fale conosco
+      </a>
+    </div>
+
+    <div id="content-de" style="display:none">
+      <h1>Kaussen Serviços – Ihr Partner für Bau und Renovierung</h1>
+      <div class="services">
+        <p><i class="fas fa-paint-roller"></i> Maler- und Lackierarbeiten</p>
+        <p><i class="fas fa-tools"></i> Allgemeine Reformierungen</p>
+        <p><i class="fas fa-hammer"></i> Trockenbau (Drywall)</p>
+        <p><i class="fas fa-fire"></i> Schweißarbeiten</p>
+        <p><i class="fas fa-bolt"></i> Elektroinstallationen</p>
+      </div>
+      <p style="margin-top:20px;">Verlassen Sie sich auf Qualität, Zuverlässigkeit und brasilianisches Handwerkskönnen.</p>
+      <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-whatsapp"></i> Fale conosco
+      </a>
+    </div>
+
+    <div id="content-en" style="display:none">
+      <h1>Kaussen Serviços – Complete solutions for your construction needs</h1>
+      <div class="services">
+        <p><i class="fas fa-paint-roller"></i> Painting and finishing work</p>
+        <p><i class="fas fa-tools"></i> General renovations</p>
+        <p><i class="fas fa-hammer"></i> Drywall and partitions</p>
+        <p><i class="fas fa-fire"></i> Welding and metal structures</p>
+        <p><i class="fas fa-bolt"></i> Electrical installations</p>
+      </div>
+      <p style="margin-top:20px;">Excellence and dedication in every project.</p>
+      <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-whatsapp"></i> Contact us
+      </a>
+    </div>
+
+    <!-- Platzhalter-Inhalt damit Scroll sichtbar ist -->
+    <section style="margin-top:28px;">
+      <p>Hier kannst du zusätzlichen Text, Referenzen oder Kundenbewertungen einfügen.</p>
+      <p style="height:900px;"></p>
+    </section>
+  </main>
+
+  <script>
+    function changeLanguage(lang) {
+      document.getElementById('content-pt').style.display = (lang === 'pt') ? 'block' : 'none';
+      document.getElementById('content-de').style.display = (lang === 'de') ? 'block' : 'none';
+      document.getElementById('content-en').style.display = (lang === 'en') ? 'block' : 'none';
+    }
+  </script>
+</body>
+</html>
+
 
 
 
