Update12082025/2 index.html

--- a/index.html
+++ b/index.html
@@ -176,7 +176,20 @@
 
     <!-- Demo-Filler, damit Scroll sichtbar wird -->
     <section style="margin-top:40px;">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ... (füge hier echten Inhalt ein)</p>
+      <p><!-- Erweiterte Leistungen auf Portugiesisch -->
+<section style="margin-top:40px;" id="servicos-detalhados-pt">
+  <h2>Serviços de pintura e revestimento com qualidade</h2>
+  <p>Aplicamos cor e proteção em tudo que é importante para você – por dentro e por fora. Com experiência e equipamentos profissionais, realizamos serviços precisos e duradouros em edifícios, estruturas metálicas e muito mais.</p>
+  <ul>
+    <li><strong>Pintura interna e decoração:</strong> Ambientes com acabamento limpo, tintas de qualidade e efeitos criativos sob demanda.</li>
+    <li><strong>Pintura de fachadas:</strong> Proteção contra umidade, sol e sujeira com produtos adequados ao clima brasileiro.</li>
+    <li><strong>Pintura de portões metálicos:</strong> Preparação e pintura para proteção duradoura contra corrosão.</li>
+    <li><strong>Pintura com pistola e sistema Airless:</strong> Resultados rápidos e uniformes em grandes áreas ou locais difíceis.</li>
+    <li><strong>Técnicas com rolo e pincel:</strong> Ideal para superfícies delicadas ou trabalhos detalhados.</li>
+  </ul>
+  <p><strong>Por que escolher a Kaussen?</strong> Experiência, confiabilidade, execução limpa, orientação profissional e adaptação ao clima brasileiro.</p>
+</section>
+</p>
       <p style="height:1200px"></p>
     </section>
   </main>
