Update12082025/4 index.html

--- a/index.html
+++ b/index.html
@@ -169,6 +169,19 @@
       </div>
       <p style="margin-top: 20px;">Excellence and dedication in every project.</p>
     </div>
+    <section style="margin-top:40px;" id="services-detailed-en">
+  <h2>Painting and Coating Services with Quality and Experience</h2>
+  <p>We bring color and protection to everything that matters to you – indoors and outdoors. With experience and professional equipment, we deliver precise and long-lasting painting and coating services – for buildings, metal structures, and more.</p>
+  <ul>
+    <li><strong>Interior painting and room design:</strong> High-quality paints, clean execution, and creative effects upon request.</li>
+    <li><strong>Facade painting:</strong> Protection against moisture, sun, and dirt – using products suited to Brazilian conditions.</li>
+    <li><strong>Painting metal and steel gates:</strong> Priming, sanding, and coating for long-term corrosion resistance.</li>
+    <li><strong>Spray painting with gun and Airless system:</strong> Smooth and fast results on large surfaces or hard-to-reach areas.</li>
+    <li><strong>Roller and brush techniques:</strong> Ideal for delicate surfaces or detailed work.</li>
+  </ul>
+  <p><strong>Why choose Kaussen?</strong> Experience, reliability, clean execution, expert advice, and adaptation to Brazilian weather conditions.</p>
+</section>
+
 
     <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
       <i class="fab fa-whatsapp"></i> Fale conosco pelo WhatsApp
