Update12082025/6 index.html

--- a/index.html
+++ b/index.html
@@ -174,6 +174,33 @@
     <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
       <i class="fab fa-whatsapp"></i> Fale conosco pelo WhatsApp
     </a>
+<!-- Erweiterte Leistungen auf Portugiesisch -->
+<section style="margin-top:40px; display:none;" id="servicos-detalhados-pt">
+  <h2>Serviços de pintura e revestimento com qualidade e experiência</h2>
+  <p>Protegemos e embelezamos o que é importante para você – por dentro e por fora. Com experiência e equipamentos profissionais, oferecemos serviços de pintura e revestimento duráveis e precisos – para edifícios, estruturas metálicas e muito mais.</p>
+  <ul>
+    <li><strong>Pintura interna e design de ambientes:</strong> Tintas de alta qualidade, execução limpa e efeitos criativos sob demanda.</li>
+    <li><strong>Pintura de fachadas:</strong> Proteção contra umidade, sol e sujeira – com produtos adequados ao clima brasileiro.</li>
+    <li><strong>Pintura de portões metálicos:</strong> Preparação, lixamento e revestimento para resistência duradoura à corrosão.</li>
+    <li><strong>Pintura com pistola e sistema Airless:</strong> Resultados suaves e rápidos em grandes superfícies ou áreas difíceis.</li>
+    <li><strong>Técnicas com rolo e pincel:</strong> Ideais para superfícies delicadas ou trabalhos detalhados.</li>
+  </ul>
+  <p><strong>Por que escolher a Kaussen?</strong> Experiência, confiabilidade, execução limpa, orientação especializada e adaptação às condições climáticas brasileiras.</p>
+</section>
+
+<!-- Erweiterte Leistungen auf Englisch -->
+<section style="margin-top:40px; display:none;" id="services-detailed-en">
+  <h2>Painting and Coating Services with Quality and Experience</h2>
+  <p>We bring color and protection to everything that matters to you – indoors and outdoors. With experience and professional equipment, we deliver precise and long-lasting painting and coating services – for buildings, metal structures, and more.</p>
+  <ul>
+    <li><strong>Interior painting and room design:</strong> High-quality paints, clean execution, and creative effects upon request.</li>
+    <li><strong>Facade painting:</strong> Protection against moisture, sun, and dirt – using products suited to Brazilian conditions.</li>
+    <li><strong>Painting metal and steel gates:</strong> Priming, sanding, and coating for long-term corrosion resistance.</li>
+    <li><strong>Spray painting with gun and Airless system:</strong> Smooth and fast results on large surfaces or hard-to-reach areas.</li>
+    <li><strong>Roller and brush techniques:</strong> Ideal for delicate surfaces or detailed work.</li>
+  </ul>
+  <p><strong>Why choose Kaussen?</strong> Experience, reliability, clean execution, expert advice, and adaptation to Brazilian weather conditions.</p>
+</section>
 
     <!-- Demo-Filler, damit Scroll sichtbar wird -->
     <section style="margin-top:40px;">
